[gd_scene load_steps=20 format=3 uid="uid://cx4auqopp5qfp"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_crtj8"]
[ext_resource type="FontFile" uid="uid://ckisufape2hep" path="res://OMORI_GAME.ttf" id="2_c4vi2"]
[ext_resource type="Script" path="res://credits.gd" id="2_i4pc4"]
[ext_resource type="Texture2D" uid="uid://cef5sjg6lpkbi" path="res://credits.png" id="2_sl0xk"]
[ext_resource type="Texture2D" uid="uid://bq3qkgix2kshp" path="res://logoNew.png" id="3_eq7nt"]
[ext_resource type="Texture2D" uid="uid://bn478cobafkus" path="res://Background.png" id="3_h65vf"]
[ext_resource type="Texture2D" uid="uid://cno43eljuitq4" path="res://exit.png" id="3_hspu6"]
[ext_resource type="Texture2D" uid="uid://dp3il5u3lkxpa" path="res://exit_bold.png" id="4_kjmq6"]
[ext_resource type="Texture2D" uid="uid://dlmp7v70of1y4" path="res://logoASE.png" id="4_tqv7y"]
[ext_resource type="AudioStream" uid="uid://ck70cgcektkfb" path="res://audio_effect/button-124476.mp3" id="10_4scvo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_elq72"]
texture = ExtResource("2_sl0xk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pb3ks"]
texture = ExtResource("3_h65vf")
modulate_color = Color(0.786347, 0.786347, 0.786347, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2i711"]
bg_color = Color(0.763809, 0.763809, 0.763808, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mxcby"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vdn6q"]
bg_color = Color(0.339095, 0.339095, 0.339095, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yj8j6"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pd8fr"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t2hsa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xc3hd"]

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_crtj8")
metadata/_edit_lock_ = true

[node name="Credits" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("2_i4pc4")

[node name="Panel" type="Panel" parent="Credits"]
offset_left = 153.0
offset_top = 30.0
offset_right = 195.0
offset_bottom = 70.0
scale = Vector2(21.0328, 14.6287)
theme_override_styles/panel = SubResource("StyleBoxTexture_elq72")

[node name="TextureButton" type="TextureButton" parent="Credits"]
offset_left = 272.0
offset_top = 165.0
offset_right = 1650.0
offset_bottom = 1543.0
scale = Vector2(0.0398453, 0.0398453)
texture_normal = ExtResource("3_hspu6")
texture_hover = ExtResource("4_kjmq6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_pb3ks")

[node name="LogoLowres" type="Sprite2D" parent="."]
position = Vector2(579, 213)
scale = Vector2(0.280178, 0.280178)
texture = ExtResource("3_eq7nt")

[node name="LogoAse" type="Sprite2D" parent="."]
position = Vector2(91, 596)
scale = Vector2(0.120755, 0.120755)
texture = ExtResource("4_tqv7y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = 36.0
offset_right = 224.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_c4vi2")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_2i711")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_mxcby")
theme_override_styles/hover = SubResource("StyleBoxFlat_vdn6q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yj8j6")
theme_override_styles/normal = SubResource("StyleBoxFlat_pd8fr")
text = "Start Game"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_c4vi2")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_t2hsa")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_xc3hd")
theme_override_styles/hover = SubResource("StyleBoxFlat_vdn6q")
theme_override_styles/normal = SubResource("StyleBoxFlat_pd8fr")
text = "Credits"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_c4vi2")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_t2hsa")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_xc3hd")
theme_override_styles/hover = SubResource("StyleBoxFlat_vdn6q")
theme_override_styles/normal = SubResource("StyleBoxFlat_pd8fr")
text = "Exit"

[node name="buttonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_4scvo")
volume_db = -15.0

[connection signal="pressed" from="Credits/TextureButton" to="Credits" method="_on_texture_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
